@@ -568,11 +568,11 @@ In combination with different notations, the typing is always last:
 Heather supports numerical constants with @dfn{units}.  Units are tags
 which are bound to types and automatically type a numerical constant to
 the associated type (see @ref{Measure types} for details).  The tags are
-user definable and are notated using a backquote:
+user definable and are notated using a quote:
 
 @example
-12`px      -- 12 pixel
-56.4`cm    -- 56.4 centimeter
+12'px      -- 12 pixel
+56.4'cm    -- 56.4 centimeter
 @end example
 
 
@@ -1297,8 +1297,8 @@ Some examples:
 @example
 def class Point : Object
 @{
-  def slot x = 0`px
-  def slot y = 0`px
+  def slot x = 0'px
+  def slot y = 0'px
 @}
 @end example
 
@@ -1795,16 +1795,16 @@ def set-clip-details(self @@ Clip,
 
 @findex def measure
 @cindex measures
-@findex ` @r{(measure type notation)}
+@findex ' @r{(unit type notation)}
 Measures define numerical types and define a default @dfn{unit tag}.
 Unit tags are attached to constant numerical values and automatically
 set the types of this constants:
 
 @example
-let page-length : Length = 21`cm
-let distance : Length = 12.15`ft
-let speed : Speed = 21`m/s
-let width : Pixel = 412`px
+let page-length : Length = 21'cm
+let distance : Length = 12.15'ft
+let speed : Speed = 21'm/s
+let width : Pixel = 412'px
 @end example
 
 Contrary to enumeration types measures don't limit the possible values
@@ -1854,8 +1854,8 @@ local bindings (@code{page-height} and @code{left-margin}) are
 implicitely of type @code{Length} and have a value properly normalized:
 
 @example
-let page-height = 21`cm
-let left-margin = 11`mm
+let page-height = 21'cm
+let left-margin = 11'mm
 
 outln(page-height.value)
 @print{} 0.21
@@ -2143,8 +2143,8 @@ explicitly to a typed reference:
 @example
 def class Point
 @{
-  def slot x = 0`px
-  def slot y = 0`px
+  def slot x = 0'px
+  def slot y = 0'px
 @}
 
 def add(self @@ Point, val @@ Pixel)
@@ -4728,7 +4728,7 @@ key-symbol      := SYMBOL `:'
 @verbatim
 number          := [ `-' ]
                    ( SIMPLE-NUMBER | COMPLEX-NUMBER | RATIONAL )
-                   [ ``' UNIT-TAG ]
+                   [ `'' UNIT-TAG ]
 unit-tag        := SYMBOL
 
 simple-number   := INT-NUMBER | REAL-NUMBER
@@ -4799,7 +4799,7 @@ compare-op      := `==' | `<>' | `<' | `>' | `<=' | `>='
                 |  `<=>' | `in'
 misc-op         := `%' | `isa'
 
-range-op        := `..' | `...'
+range-op        := `..'
 @end verbatim
 @end smallformat
 
