@@ -1,4 +1,4 @@
-def x = 12`
-def y = 12.34`12
-def z = (12`)
+def x = 12'
+def y = 12.34'12
+def z = (12')
 
