@@ -1,2 +1,2 @@
 <?xml version='1.0' encoding='utf-8'?>
-<seq><seq><id>def</id><id>x</id><punct type='='/><seq><lit type='int'>12</lit><punct type='`'/><id>def</id></seq></seq><seq><id>def</id><id>z</id><punct type='='/><lit type='int'>12</lit></seq></seq>
+<seq><seq><id>def</id><id>x</id><punct type='='/><seq><lit type='int'>12</lit><punct type='&apos;'/><id>def</id></seq></seq><seq><id>def</id><id>z</id><punct type='='/><lit type='int'>12</lit></seq></seq>
